force-app/main/default/objects/school__c/school__c.object-meta.xml
<CustomObject>
    <description>Just students record</description>
    <label>school</label>
    <nameField>
        <displayFormat>sch-{000}</displayFormat>
        <label>school Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>