force-app/main/default/objects/school__c/fields/age__c.field-meta.xml
<CustomField>
    <fullName>age__c</fullName>
    <label>age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>