force-app/main/default/objects/school__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>schools</relationshipLabel>
    <relationshipName>schools</relationshipName>
    <type>Lookup</type>
</CustomField>