force-app/main/default/objects/school__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>student mail</description>
    <inlineHelpText>Enter mail-id</inlineHelpText>
    <label>email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>