force-app/main/default/objects/school__c/fields/vaccinated__c.field-meta.xml
<CustomField>
    <fullName>vaccinated__c</fullName>
    <label>vaccinated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>