force-app/main/default/objects/school__c/validationRules/age_check.validationRule-meta.xml
<ValidationRule>
    <fullName>age_check</fullName>
    <active>true</active>
    <errorConditionFormula>age__c &gt;= 18</errorConditionFormula>
    <errorDisplayField>age__c</errorDisplayField>
    <errorMessage>Allowed 18+ only</errorMessage>
</ValidationRule>